<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMIActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/bmi_calculator"
        android:textSize="32sp"/>

    <ToggleButton
        android:id="@+id/toggleunits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textOff="@string/imperial_units"
        android:textOn="@string/metric_units" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/heightlabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/height"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/heightcm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:inputType="numberDecimal"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:hint="@string/cm"
                    android:autofillHints="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <EditText
                        android:id="@+id/heightfeet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:inputType="numberDecimal"
                        android:gravity="center_horizontal"
                        android:hint="@string/ft"
                        android:autofillHints="" />

                    <EditText
                        android:id="@+id/heightinches"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:inputType="numberDecimal"
                        android:gravity="center_horizontal"
                        android:hint="@string/in"
                        android:autofillHints="" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            app:cardElevation="6dp"
            app:cardCornerRadius="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/weightlabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/weight"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/weightkgs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:inputType="numberDecimal"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:hint="@string/kg"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/weightlbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="3"
                    android:inputType="numberDecimal"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:hint="@string/lbs"
                    android:autofillHints="" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/calculate" />




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="6dp"
        app:cardMaxElevation="6dp"
        android:layout_margin="6dp"
        android:id="@+id/resultcard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/your_bmi"
                android:textSize="30sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/bmi"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_nutritionpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btnSpoon"
            app:srcCompat="@drawable/spoon" />

        <ImageButton
            android:id="@+id/btn_caloriepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btnFire"
            app:srcCompat="@drawable/fire" />

        <ImageButton
            android:id="@+id/btn_healthpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/btnMore"
            app:srcCompat="@drawable/add" />
    </LinearLayout>


</LinearLayout>